// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-band> Component Basic usage 1`] = `
<bolt-band>
  <div class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Full bleed usage 2`] = `
<bolt-band
  aria-expanded="false"
  class="is-ready"
  style=""
  theme="dark"
>
  
  
  <div
    class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-dark"
    style=""
  >
    
                      
            
        
        
                
    <div
      class="c-bolt-band__content"
      style=""
    >
      
        







  
      <bolt-wrapper
        bolt-object=""
        full="true"
        size="xxlarge"
        style=""
      >
        
    
        <div
          class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full"
          style=""
        >
          
                                  This band is not full bleed.
          
          
        </div>
        
  
      </bolt-wrapper>
            
    </div>
    
    
      
  </div>
  

</bolt-band>
`;

exports[`<bolt-band> Component Nested bands usage 1`] = `
<bolt-band
  aria-expanded="false"
  class="is-ready"
  style=""
  theme="xdark"
>
  
  
  <div
    class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-xdark c-bolt-band--full-bleed"
    style=""
  >
    
                      
            
        
        
                
    <div
      class="c-bolt-band__content"
      style=""
    >
      
        







  
      <bolt-wrapper
        bolt-object=""
        full="true"
        size="xxlarge"
        style=""
      >
        
    
        <div
          class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full"
          style=""
        >
          
                                          

 
  




  

  









          <h2
            class="c-bolt-headline c-bolt-headline--bold c-bolt-headline--xxxlarge"
            style=""
          >
            This Band Has 2 Bands Nested Inside
          </h2>
          
        








          <bolt-band
            aria-expanded="false"
            class="is-ready"
            size="xsmall"
            style=""
            theme="light"
          >
            
  
            <div
              class="c-bolt-band c-bolt-band--xsmall c-bolt-band--valign-center t-bolt-light"
              style=""
            >
              
                      
            
        
        
                
              <div
                class="c-bolt-band__content"
                style=""
              >
                
        







  
                <bolt-wrapper
                  bolt-object=""
                  full="true"
                  size="xxlarge"
                  style=""
                >
                  
    
                  <div
                    class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full"
                    style=""
                  >
                    
                                  Nested band 1
          
          
                  </div>
                  
  
                </bolt-wrapper>
                      
              </div>
              
    
      
            </div>
            

          </bolt-band>
          
        








          <bolt-band
            aria-expanded="false"
            class="is-ready"
            size="large"
            style=""
            theme="xlight"
          >
            
  
            <div
              class="c-bolt-band c-bolt-band--large c-bolt-band--valign-center t-bolt-xlight"
              style=""
            >
              
                      
            
        
        
                
              <div
                class="c-bolt-band__content"
                style=""
              >
                
        







  
                <bolt-wrapper
                  bolt-object=""
                  full="true"
                  size="xxlarge"
                  style=""
                >
                  
    
                  <div
                    class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full"
                    style=""
                  >
                    
                                  Nested band 2
          
          
                  </div>
                  
  
                </bolt-wrapper>
                      
              </div>
              
    
      
            </div>
            

          </bolt-band>
          
      
          
          
        </div>
        
  
      </bolt-wrapper>
            
    </div>
    
    
      
  </div>
  

</bolt-band>
`;

exports[`<bolt-band> Component Pinned content usage 1`] = `
<bolt-band size="large">
  <div class="c-bolt-band c-bolt-band--large c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content c-bolt-band__content--pinned c-bolt-band__content--pinned-upper">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          <div class="c-bolt-band__pinned-items">
            <div class="c-bolt-band__pinned-item">
              upper pinned 1
            </div>
            <div class="c-bolt-band__pinned-item">
              upper pinned 2
            </div>
            <div class="c-bolt-band__pinned-item">
              upper pinned 3
            </div>
          </div>
        </div>
      </bolt-wrapper>
    </div>
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
    <div class="c-bolt-band__content c-bolt-band__content--pinned c-bolt-band__content--pinned-lower">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          <div class="c-bolt-band__pinned-items">
            <div class="c-bolt-band__pinned-item">
              lower pinned 1
            </div>
            <div class="c-bolt-band__pinned-item">
              lower pinned 2
            </div>
            <div class="c-bolt-band__pinned-item">
              lower pinned 3
            </div>
          </div>
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Semantic tag usage: article 1`] = `
<bolt-band tag="article">
  <article class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </article>
</bolt-band>
`;

exports[`<bolt-band> Component Semantic tag usage: div 1`] = `
<bolt-band tag="div">
  <div class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Semantic tag usage: figure 1`] = `
<bolt-band tag="figure">
  <figure class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </figure>
</bolt-band>
`;

exports[`<bolt-band> Component Semantic tag usage: footer 1`] = `
<bolt-band tag="footer">
  <footer class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </footer>
</bolt-band>
`;

exports[`<bolt-band> Component Semantic tag usage: header 1`] = `
<bolt-band tag="header">
  <header class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </header>
</bolt-band>
`;

exports[`<bolt-band> Component Semantic tag usage: nav 1`] = `
<bolt-band tag="nav">
  <nav class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </nav>
</bolt-band>
`;

exports[`<bolt-band> Component Semantic tag usage: section 1`] = `
<bolt-band tag="section">
  <section class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </section>
</bolt-band>
`;

exports[`<bolt-band> Component Size of the band: large 1`] = `
<bolt-band size="large">
  <div class="c-bolt-band c-bolt-band--large c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Size of the band: medium 1`] = `
<bolt-band size="medium">
  <div class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Size of the band: none 1`] = `
<bolt-band size="none">
  <div class="c-bolt-band c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Size of the band: small 1`] = `
<bolt-band size="small">
  <div class="c-bolt-band c-bolt-band--small c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Size of the band: xsmall 1`] = `
<bolt-band size="xsmall">
  <div class="c-bolt-band c-bolt-band--xsmall c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Theme of the band: dark 1`] = `
<bolt-band theme="dark">
  <div class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-dark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Theme of the band: light 1`] = `
<bolt-band theme="light">
  <div class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-light c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Theme of the band: none 1`] = `
<bolt-band theme="none">
  <div class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Theme of the band: xdark 1`] = `
<bolt-band theme="xdark">
  <div class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-xdark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Theme of the band: xlight 1`] = `
<bolt-band theme="xlight">
  <div class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-xlight c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;

exports[`<bolt-band> Component Theme of the band: xxdark 1`] = `
<bolt-band theme="xxdark">
  <div class="c-bolt-band c-bolt-band--medium c-bolt-band--valign-center t-bolt-xxdark c-bolt-band--full-bleed">
    <div class="c-bolt-band__content">
      <bolt-wrapper size="xxlarge"
                    full="true"
                    bolt-object
      >
        <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
          This is a band.
        </div>
      </bolt-wrapper>
    </div>
  </div>
</bolt-band>
`;
